update open graph data

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link href="/assets/img/favicon.png" rel="shortcut icon" type="image/x-icon">
 
   <!-- Twitter Card data -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@chrisbup">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="The portfolio website of Chris Heuberger — developer / designer / organizer - Brooklyn, NY">
