update open graph data

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <meta name="twitter:site" content="@chrisbup">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="The portfolio website of Chris Heuberger — developer / designer / organizer - Brooklyn, NY">
-  <meta name="twitter:image" content="http://www.chrisheuberger.com/assets/img/og-art-1.png">
+  <meta name="twitter:image" content="/assets/img/og-art-1.png">
   <meta name="twitter:creator" content="@chrisbup">
 
   <!-- Open Graph data -->
@@ -20,7 +20,7 @@
   <meta property="og:url" content="http://www.chrisheuberger.com/" />
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:description" content="The portfolio website of Chris Heuberger — developer / designer / organizer - Brooklyn, NY" />
-  <meta property="og:image" content="http://www.chrisheuberger.com/assets/img/og-art-1.png" />
+  <meta property="og:image" content="/assets/img/og-art-1.png" />
 
   {% if page.url == "/rrbc" %}
     <link href="/assets/css/rrbc.css" rel="stylesheet">
