--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,10 +44,10 @@
     </script>
     {% if page.url == "/favorite-things" %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
-      <script src="assets/js/main.js"></script>
-      <script src="assets/js/favorite-things.js"></script>
+      <script src="/assets/js/main.js"></script>
+      <script src="/assets/js/favorite-things.js"></script>
     {% else %}
-      <script src="assets/js/main.js"></script>
+      <script src="/assets/js/main.js"></script>
     {% endif %}
   </body>
 </html>
