--- a/_layouts/hiit.html
+++ b/_layouts/hiit.html
@@ -27,7 +27,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-3.5.1.min.js"><\/script>')</script>
-    <script src="assets/js/hiit.js"></script>
+    <script src="/assets/js/hiit.js"></script>
 
   </body>
 </html>
