--- a/_layouts/rrbc.html
+++ b/_layouts/rrbc.html
@@ -70,7 +70,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-3.5.1.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-    <script src="assets/js/rrbc.js"></script>
+    <script src="/assets/js/rrbc.js"></script>
 
   </body>
 </html>
