--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="sidebar-content">
     <div class="name-wrapper">
       <h3 class="name">
-        <a class="name-link" href="/" aria-label="Chris Heuberger"><span>Chris</span><span>Heuberger</span></a>
+        <a class="name-link" href="/"><span>Chris</span><span>Heuberger</span></a>
       </h3>
     </div>
     <div class="wordmark-zig-zag-wrapper">
@@ -24,7 +24,7 @@
         <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener">LinkedIn</a></li>
         <li class="nav-item"><a class="nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener">Twitter</a></li>
         <li class="nav-item"><a class="nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener">Instagram</a></li>
-        <li><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener" title="chrisheuberg@gmail.com">email</a></li>
+        <li><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener" title="chrisheuberg@gmail.com">Email</a></li>
       </ul>
     </nav>
   </div>
@@ -42,8 +42,8 @@
       <li><a class="mobile-nav-link" href="/side-projects">Side</a></li>
     </ul>
     <ul class="mobile-social-grid">
-      <li><a class="mobile-nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-github"></i></a></li>
-      <li><a class="mobile-nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-codepen"></i></a></li>
+      <li><a class="mobile-nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-github"></i><span class="screen-reader-only">GitHub</span></a></li>
+      <li><a class="mobile-nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-codepen"></i><span class="screen-reader-only">CodePen</span></a></li>
       <li><a class="mobile-nav-link" href="https://glitch.com/@ChrisBup" target="_blank" rel="noopener"><span class="glitch-icon">
         <svg class="glitch-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="255.3px" viewBox="0 0 320 255.3" style="enable-background:new 0 0 320 255.3;" xml:space="preserve">
               <g transform="translate(0.000000, 30.000000)">
@@ -92,12 +92,12 @@
                   </g>
                 </g>
               </g>
-        </svg></a></li>
-      <li><a class="mobile-nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-dribbble"></i></a></li>
-      <li><a class="mobile-nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a class="mobile-nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a></li>
-      <li><a class="mobile-nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a></li>
-      <li><a class="mobile-nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener" title="chrisheuberg@gmail.com"><i class="far fa-envelope"></i></a></li>
+        </svg><span class="screen-reader-only">Glitch</span></a></li>
+      <li><a class="mobile-nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-dribbble"></i><span class="screen-reader-only">Dribbble</span></a></li>
+      <li><a class="mobile-nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i><span class="screen-reader-only">LinkedIn</span></a></li>
+      <li><a class="mobile-nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-twitter"></i><span class="screen-reader-only">Twitter</span></a></li>
+      <li><a class="mobile-nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener"><i class="fab fa-instagram"></i><span class="screen-reader-only">Instagram</span></a></li>
+      <li><a class="mobile-nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener" title="chrisheuberg@gmail.com"><i class="far fa-envelope"></i><span class="screen-reader-only">Email</span></a></li>
     </ul>
   </nav>
 </div>
