--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -275,6 +275,20 @@ img {
 
 // utility classes
 
+.screen-reader-only {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+  height: 1px; 
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .spacer {
   width: 100%;
   height: rem(40px);
