--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="HandheldFriendly" content="true">
   <title>{{ page.title }}</title>
   <meta name="description" content="The portfolio website of Chris Heuberger — developer / designer / organizer - Brooklyn, NY">
-  <link href="/assets/img/favicon.png" rel="shortcut icon" type="image/x-icon" alt="CH inside a dark circle">
+  <link href="/assets/img/favicon.png" rel="shortcut icon" type="image/x-icon">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
