--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,13 @@
     <link href="/assets/css/rrbc.css" rel="stylesheet">
   {% elsif page.url == "/hiit" %}
     <link href="/assets/css/hiit.css" rel="stylesheet">
+  {% elsif page.url == "/resume" %}
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=block" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
+    <link href="/assets/css/normalize.min.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/multiple.js/0.0.1/multiple.min.css" rel="stylesheet">
   {% else %}
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=block" rel="stylesheet">
