--- a/_scss/about.scss
+++ b/_scss/about.scss
@@ -62,6 +62,12 @@
   }
 }
 
+// about text links
+
+.about-text-link-wrapper {
+  margin-top: rem(20px);
+}
+
 .short-list-wrapper {
   margin: rem(40px) 0 0 0;
   padding: 0;
@@ -73,7 +79,7 @@
     @include mediaMin(medium) {
       padding: rem(40px);
     }
-    .short-title {
+    .short-list-title {
       padding-bottom: rem(20px);
     }
     .short-list-li {
