--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -254,6 +254,7 @@ img {
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   @include media(medium) {
     flex-direction: column;
   }
