--- a/_scss/resume.scss
+++ b/_scss/resume.scss
@@ -57,6 +57,10 @@
   box-sizing: border-box;
   @include floating-card-loading-animation;
   @include media(medium) {
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
     transform: none;
   }
   @include mediaMin(medium) {
