--- a/_scss/about.scss
+++ b/_scss/about.scss
@@ -42,6 +42,10 @@
         position: relative;
         top: 50%;
         left: 50%;
+        -webkit-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        -o-transform: translate(-50%,-50%);
         transform: translate(-50%,-50%);
         width: 115%;
       }
@@ -52,6 +56,10 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        -webkit-transform: rotate(240deg);
+        -moz-transform: rotate(240deg);
+        -ms-transform: rotate(240deg);
+        -o-transform: rotate(240deg);
         transform: rotate(240deg);
         backface-visibility: hidden;
       }
