--- a/_scss/nav.scss
+++ b/_scss/nav.scss
@@ -104,7 +104,15 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  -webkit-transform: translateY(100%) translateY(-60px);
+  -moz-transform: translateY(100%) translateY(-60px);
+  -ms-transform: translateY(100%) translateY(-60px);
+  -o-transform: translateY(100%) translateY(-60px);
   transform: translateY(100%) translateY(-60px);
+  -webkit-transition: -webkit-transform 0.125s ease;
+  -moz-transition: -moz-transform 0.125s ease;
+  -o-transition: -o-transform 0.125s ease;
+  transition: -webkit-transform 0.125s ease;
   transition: transform 0.125s ease;
   @include media(medium) {
     display: block;
@@ -172,8 +180,16 @@
           width: 30px;
           height: 1px;
           background: $graylight;
+          -webkit-transform: rotate(45deg);
+          -moz-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+          -o-transform: rotate(45deg);
           transform: rotate(45deg);
           &:first-child {
+            -webkit-transform: rotate(135deg);
+            -moz-transform: rotate(135deg);
+            -ms-transform: rotate(135deg);
+            -o-transform: rotate(135deg);
             transform: rotate(135deg);
           }
         }
@@ -207,6 +223,10 @@
   }
   &.showing {
     bottom: 0;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
     transform: translateY(0);
     .menu-tab {
       justify-content: flex-start;
