--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,9 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
       <script src="/assets/js/main.js"></script>
       <script src="/assets/js/favorite-things.js"></script>
+    {% elsif page.url == "/type-tests" %}
+      <script src="/assets/js/main.js"></script>
+      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     {% elsif page.url == "/resume" %}
       <script src="//cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
       <script src="/assets/js/main.js"></script>
